# cargo-features = ["codegen-backend"]

[package]
name = "ember-lox"
version = "0.1.0"
authors = [
    "Eden Wang <edwardwang33773@gmail.com>",
    "Codecrafters <hello@codecrafters.io>",
]
edition = "2021"
rust-version = "1.80"
categories = ["compilers", "parser-implementations", "parsing"]
keywords = ["lox", "compiler", "interpreter", "parser", "virtual-machine"]

[dependencies]
anyhow = "1.0.95"    # error handling
bytes = "1.9.0"      # helps manage buffers
thiserror = "2.0.11" # error handling

[dependencies.ember-lox-tokenizer]
path = "./ember-lox-tokenizer"

[dependencies.ember-lox-parse]
path = "./ember-lox-parse"

# [profile.dev]
# codegen-backend = "cranelift"
